Tweak my account root template. Also, add further check to email_notify.py to ensure that, when no email address has been specified, blank emails are not sent

--- a/trunk/web_frontend/templates/my_account/my_account.html
+++ b/trunk/web_frontend/templates/my_account/my_account.html
@@ -16,8 +16,12 @@
 <p>Select an option from the menu on the left:</p>
 <ul>
     <li><b>Running Jobs</b> lists newly submitted jobs awaiting submission to the Condor pool, and jobs still running on the Condor pool.</li>
+    <br>
     <li><b>Completed Jobs</b> lists jobs that finished running on Condor, with results available to download.</li>
+    <br>
     <li><b>Errors</b> lists jobs that have failed, along with information on why the job may have failed.</li>
+    <br>
+    <li><b>Change password</b> allows you to change the password associated with your Condor-Copasi account. Note, this password is unrelated to any other system accounts you may have.</li>
 </ul>
 <p>More information on this section is available on the <a href="http://code.google.com/p/condor-copasi/wiki/Usage" target="_blank">Wiki site</a></p>
 {%endblock%}
