Update wording for Tasks root page

--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -15,7 +15,7 @@
 
 {%block body %}
 
-<p>To start running a new job on the system, select the type of task you wish to perform from the menu on the left. Brief descriptions of the tasks available are listed below. For more detailed information, consult the <a href="http://code.google.com/p/condor-copasi/wiki/Usage" target="_blank">Wiki site</a></p>
+<p>To start running a new job on the system, select the type of task you wish to perform from the menu on the left. Brief descriptions of the tasks available are listed below. All tasks require that a suitable model is prepared using a supported version of Copasi. The steps required to prepare the model vary depending on the task being performed. For more detailed information, consult the <a href="http://code.google.com/p/condor-copasi/wiki/Instructions" target="_blank">Wiki site</a></p>
 
 <h4>Sensitivity Optimization / Global Sensitivity Analysis</h4>
 Condor-Copasi is able to automate and parallelize the global sensitivity analysis procedure by optimization of sensitivities, as described in the paper <a href="http://www.ncbi.nlm.nih.gov/pubmed/18632455" target="_blank">A new strategy for assessing sensitivities in biochemical models</a>.
