--- a/trunk/web_frontend/templates/help.html
+++ b/trunk/web_frontend/templates/help.html
@@ -5,14 +5,14 @@
 
 {% block body %}
 <h2>Documentation Wiki</h2>
-<p>For help on how to use Condor-Copasi, along with tips on troubleshooting problems, please consult the <a href="http://code.google.com/p/condor-copasi/wiki/Instructions" target="_blank">Wiki site</a>.</p>
+<p>For help on how to use Condor-COPASI, along with tips on troubleshooting problems, please consult the <a href="http://code.google.com/p/condor-copasi/wiki/Instructions" target="_blank">Wiki site</a>.</p>
 <h2>Bugs</h2>
-<p>If you have discovered a bug related to Condor-Copasi, please report it on the <a href="http://code.google.com/p/condor-copasi/issues/list" target="_blank">issue tracker</a>.</p>
+<p>If you have discovered a bug related to Condor-COPASI, please report it on the <a href="http://code.google.com/p/condor-copasi/issues/list" target="_blank">issue tracker</a>.</p>
 
 <h2>Further information</h2>
-<p>The Condor-Copasi project site is hosted on Google Code, and can be accessed <a href="http://code.google.com/p/condor-copasi" target="_blank">here</a>.</p>
+<p>The Condor-COPASI project site is hosted on Google Code, and can be accessed <a href="http://code.google.com/p/condor-copasi" target="_blank">here</a>.</p>
 
-<p>For further information on Copasi, check the <a href="http://www.copasi.org/" target="_blank">Copasi web site</a>.</p>
+<p>For further information on COPASI, check the <a href="http://www.copasi.org/" target="_blank">COPASI web site</a>.</p>
 
 <p>For more information on the Condor High Throughput System, check the <a href="http://www.cs.wisc.edu/condor/" target="_blank">Condor Project web site</a></p>
 {% endblock %}
