--- a/trunk/web_frontend/templates/my_account/my_account.html
+++ b/trunk/web_frontend/templates/my_account/my_account.html
@@ -21,7 +21,7 @@
     <br>
     <li><b>Errors</b> lists jobs that have failed, along with information on why the job may have failed.</li>
     <br>
-    <li><b>Change password</b> allows you to change the password associated with your Condor-Copasi account. Note, this password is unrelated to any other system accounts you may have.</li>
+    <li><b>Change password</b> allows you to change the password associated with your Condor-COPASI account. Note, this password is unrelated to any other system accounts you may have.</li>
 </ul>
 <p>More information on this section is available on the <a href="http://code.google.com/p/condor-copasi/wiki/Instructions" target="_blank">Wiki site</a></p>
 {%endblock%}
