--- a/trunk/web_frontend/templates/login.html
+++ b/trunk/web_frontend/templates/login.html
@@ -19,6 +19,8 @@ You must login to continue.
 <table class="formtable">
 {{ form.as_table }}
 </table>
+<table class="formtable">
 <tr><td><input type="submit" value="Submit"></td></tr>
+</table>
 </form>
 {% endblock %}
