--- a/trunk/web_frontend/static/style.css
+++ b/trunk/web_frontend/static/style.css
@@ -183,12 +183,13 @@ table.formtable th {
 }
 
 #user_tools {
-    position: absolute;
+    position: relative;
     font-size: 12px;
     float: right;
     bottom: 0;
     right: 0;
-    padding: 3px;
+
+    padding: 20px 3px 0px 3px;
 }
 
 #breadcrumbs {
@@ -202,13 +203,14 @@ table.formtable th {
 
 
 #sidebar {
+    position: relative;
     width: 150px;
     border: 1px solid gray;
     float: left;
     font-size: 14px;
     font-weight: bold;
     background: white;
-    margin: 0 10px 10px 10px;
+    margin: 0px 10px 10px 10px;
     padding: 0px 10px 10px 10px;
 }
 
@@ -230,10 +232,12 @@ table.formtable th {
     font-size: 12px
 }
 #content {
+
     margin: 10px 10px 10px 190px;
     padding: 10px;
     border: 1px solid gray;
     background: white;
+
 
 }
 
