--- a/trunk/web_frontend/templates/my_account/job_details.html
+++ b/trunk/web_frontend/templates/my_account/job_details.html
@@ -26,7 +26,7 @@
     <li><b><a href="{% url job_save job.name %}">Download</a></b> the results</li>
     <li><b><a href="{% url job_download job.name %}">Download</a></b> the directory containing the output files as a <b><tt>.tar.gz</tt></b> file.</li>
 </ul>
-<p>To open <b><tt>tar.gz</tt></b> files in Windows, you may need to install additional software, such as <a href="http://www.7-zip.org/" target="_blank">7-zip</a>.</p>
+<p>To open <b><tt>tar.bz2</tt></b> files in Windows, you may need to install additional software, such as <a href="http://www.7-zip.org/" target="_blank">7-zip</a>.</p>
 </div>
 {% endif %}
 
