Update default template, and remove all refs to .tar.gz files

--- a/trunk/web_frontend/templates/default.html
+++ b/trunk/web_frontend/templates/default.html
@@ -65,7 +65,7 @@ Condor-COPASI Web Frontend - {% block title %} {{ pageTitle }} {% endblock %}
         </div>
     </div>
     <div id="footer">
-        Condor-COPASI Web Frontend, version {{version}}. Copyright 2010.
+        Condor-COPASI Web Frontend, version {{version}}.
     </div>
 </div>
 </body>
