Change display settings, and link from completed jobs page

--- a/trunk/web_frontend/templates/my_account/completed_jobs.html
+++ b/trunk/web_frontend/templates/my_account/completed_jobs.html
@@ -12,6 +12,7 @@
 
 <p>You currently have <b>{{completed_job_count}}</b> completed job{%if completed_job_count > 1%}s{%endif%} stored on the system. Click on a job to see more information, and to download results.
 <p>
+<p><a href="{% url so_compare %}">Click here</a> to compare the output of any Sensitivity Optimization jobs</p>
 <table class="jobtable">
     <tr>
         <th>Job name</th>
