--- a/trunk/web_frontend/templates/my_account/so_motionchart.html
+++ b/trunk/web_frontend/templates/my_account/so_motionchart.html
@@ -34,4 +34,5 @@
 <div class = "plot">
     <div id="chart_div"></div>
 </div>
+    <p>Implemented using the <a href="http://code.google.com/apis/visualization/documentation/gallery/motionchart.html">Google MotionChart API</a>. All code and data are processed and rendered locally; no data is transmitted to Google.</p>
 {% endblock %}
