--- a/trunk/web_frontend/templates/my_account/so_compare.html
+++ b/trunk/web_frontend/templates/my_account/so_compare.html
@@ -19,7 +19,7 @@
 <table class="jobtable">
     <tr>
         <th>Compare?</th>
-        <th>Variation?</th>
+        <th>Variation (use integers between 0 and 99)</th>
         <th>Job name</th>
         <th>Job type</th>
         <th>Runs</th>
