--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -9,6 +9,7 @@
     <li><a href="{% url new_PS %}">Scan in Parallel</a></li>
     <li><a href="{% url new_OR %}">Optimization Repeat</a></li>
     <li><a href="{% url new_PR %}">Parameter Estimation Repeat</a></li>
+    <li><a href="{% url new_RW %}">Raw Mode</a></li>
     <li><a href="{% url new_OD %}">Optimization Repeat (Different Algorithms)</a></li>
 </ul>
 {% endblock %}
