--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -33,6 +33,10 @@ This feature runs the optimization task a set number of times, splitting into mu
 <h4>Parameter Estimation Repeat</h4>
 Similar to the optimization repeat task above, this feature runs the parameter estimation task multiple times, splitting into parallel jobs where necessary. The best set of parameters values are then selected, though the results of each parameter estimation run are available to download if necessary.
 
+<h4>Raw Mode</h4>
+Raw mode allows you to prepare a COPASI model file to run exactly as you want. One or more tasks should be marked as executable, with a report type and output filename specified. Condor-COPASI can run multiple repeats of the executable task(s) in parallel, with one repeat performed per parallel job. The report output filenames will be appended with the zero-indexed repeat number.
+
+
 <h4>Optimization Repeat with Different Alogorithms</h4>
 This feature runs the optimization task using different algorithms. Each algorithm runs a separate parallel job. Condor-COPASI will automatically determine which algorithm(s) found the best result.
 
