Update template to recognise build 35 is supported

--- a/trunk/web_frontend/templates/tasks/new_task.html
+++ b/trunk/web_frontend/templates/tasks/new_task.html
@@ -152,7 +152,8 @@ function selectall(select){
 </p>
 
 
-<p><b>Please note - it is very important that the COPASI file is saved using a supported version of COPASI. At present, only Build 33 (version 4.6.33) and Build 34 (version 4.6.34) are supported.</b></p>
+<p><b>Please note - it is very important that the COPASI file is saved using a supported version of COPASI. At present, only Build 33 (version 4.6.33), Build 34 (version 4.6.34), and Build 35 (version 4.6.35) are supported.</b></p>
+
 {% if file_error %}
 <div class="error">
 There was a problem with the file you submitted. Please ensure the guidelines above have been followed.
