--- a/trunk/web_frontend/templates/default.html
+++ b/trunk/web_frontend/templates/default.html
@@ -46,6 +46,8 @@ Condor-COPASI Web Frontend - {% block title %} {{ pageTitle }} {% endblock %}
                     {% block accountlist %}{% endblock %}
                     <li><a href="{% url web_frontend.condor_copasi_db.views.tasks %}">Tasks</a></li>
                     {% block tasklist %}{% endblock %}
+                    <!-- <li><a href="{% url web_frontend.condor_copasi_db.views.usage %}">Usage Statistics</a></li> !-->
+                    {% block usagelist %}{% endblock %}
                     {%endif%}
                     <li><a href="{% url help %}">Help</a></li>
                 </ul>
