--- a/web_frontend/templates/my_account/completed_jobs.html
+++ b/web_frontend/templates/my_account/completed_jobs.html
@@ -27,7 +27,7 @@
         <td><a href="{% url job_details job.name %}">{{job.name}}</a></td>
         <td>{{job.get_job_type_display}}</td>
         <td>{% if job.runs != None %}{{job.runs}}{% endif %}</td>
-        <td>{{condor_jobs|length}}</td>
+        <td>{{job.condor_jobs}}</td>
         <td>{{job.finish_time}}</td>
     </tr>
     {% endfor %}
