Correct units for CPU usage - days not hours

--- a/trunk/web_frontend/templates/usage/usageHome.html
+++ b/trunk/web_frontend/templates/usage/usageHome.html
@@ -23,7 +23,7 @@ window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{%
     var data = new google.visualization.DataTable();
     data.addColumn('date', 'Date');
     data.addColumn('number', 'Tasks Submitted');
-    data.addColumn('number', 'CPU Hours Used');
+    data.addColumn('number', 'CPU Days Used');
 //    data.addColumn('number', 'Parallel Jobs Submitted');
     data.addRows([
 //Style should be like this:    
