Replace option for EPS download with PDF download - this is more likely to be used

--- a/trunk/web_frontend/templates/my_account/so_progress_plot.html
+++ b/trunk/web_frontend/templates/my_account/so_progress_plot.html
@@ -13,7 +13,7 @@
 {% csrf_token %}
 <input type="submit" name="download_png" value="Download in .PNG Format">
 <input type="submit" name="download_svg" value="Download in .SVG Format">
-<input type="submit" name="download_eps" value="Download in .EPS Format">
+<input type="submit" name="download_pdf" value="Download in .PDF Format">
 </form>
 </div>
 
