--- a/web_frontend/templates/my_account/job_details.html
+++ b/web_frontend/templates/my_account/job_details.html
@@ -73,7 +73,7 @@
         </td></tr>
         <tr><th>Filename</th><td>{{job.model_name}}</td></tr>
         <tr><th>Status:</th><td>{{job.get_status_display}}</td></tr>
-        <tr><th>Condor status:</td><td><b>Total: {{total_condor_jobs}} jobs</b>
+        <tr><th>Condor status:</th><td><b>Total: {{total_condor_jobs}} jobs</b>
                                      <br>Running: <b>{{running_condor_jobs}}</b>
                                      <br>Idle: <b>{{idle_condor_jobs}}</b>
                                      <br>Held: <b>{{held_condor_jobs}}</b>
